# MAVARIC-MTS

./: README.md
Dynamics_MTS/: ABM_MVRPMD.hpp  CMakeLists.txt  Dynamics.cpp  Dynamics.hpp  RK4_MVRPMD.cpp  RK4_MVRPMD.hpp  main.cpp  mavaric  paths
Dynamics_MTS/DynamicsParts/Headers/: PopulationEstimator.hpp  SpringEnergy.h  StateDepPots.h  StateIndepPot.h  dM_Matrix_MTS_dQ.hpp  dSpring_dQ.hpp  dStateIndep_dQ.hpp
Dynamics_MTS/DynamicsParts/Sources/: MVRPMD_MTS_Hamiltonian.cpp  PopulationEstimator.cpp  StateDepPots.cpp  StateIndepPot.cpp  Theta_MTS.cpp  dM_Matrix_dQ.cpp  dSpring_dQ.cpp
Dynamics_MTS/InputFiles/: Dynamics.txt  ElecParameters.txt  MonteCarlo.txt  Sampling.txt  SystemParameters.txt
Dynamics_MTS/Results/: PAC  PAC_vs_traj  PSV.txt  PSV0  PSV1  PSV2  PSV3  PSV4  PSV5  PSV6  PSV7  decorrelation  estimator.txt  mcData.txt  mcData0  mcData1  mcData2  mcData3  mcData4  mcData5  mcData6  mcData7  semi_classic
Dynamics_MTS/Results/Study/: PAC_vs_traj_1  PAC_vs_traj_10  PAC_vs_traj_100  PAC_vs_traj_1000  PAC_vs_traj_10000
Dynamics_MTS/Results/Trajectories/: P.txt  P0  P0_clean  P1  P2  P3  P4  P5  P6  P7  Q.txt  Q0  Q0_clean  Q1  Q2  Q3  Q4  Q5  Q6  Q7  pelec.txt  pelec0  pelec1  pelec2  pelec3  pelec4  pelec5  pelec6  pelec7  xelec.txt  xelec0  xelec1  xelec2  xelec3  xelec4  xelec5  xelec6  xelec7
Dynamics_MTS/scripts/: histogram.py
Dynamics_MTS/sims/mvrpmd/: CMakeLists.txt  mvrpmd.cpp
Dynamics_MTS/sims/mvrpmd/dynamics/: Dynamics.cpp
Dynamics_MTS/sims/mvrpmd/dynamics/Headers/: Dynamics.hpp
Dynamics_MTS/sims/mvrpmd/equilibrium/: MonteCarlo.cpp  MonteCarloHelper.cpp  MonteCarlo_MTS.cpp  input_mvrpmd.cpp
Dynamics_MTS/sims/mvrpmd/equilibrium/Headers/: MonteCarlo_MTS.hpp  Sampling_MTSastra.hpp
Dynamics_MTS/sims/mvrpmd/sampling/: Sampling_MTS.cpp  Sampling_MTSastra.cpp
Dynamics_MTS/sims/two-particle/InputFiles/: Dynamics.txt  MonteCarlo.txt  Sampling.txt
Dynamics_MTS/sims/two-particle/Output/: P1  P2  PAC1  PAC2  PSV10  PSV20  Q1  Q2  estimator.txt  hist1_mom  hist2.txt  mcData0
Dynamics_MTS/sims/two-particle/sampling/: two_particle_sampling.cpp
Dynamics_MTS/src/dynamics/: Dynamics.cpp  init_PAC.cpp
Dynamics_MTS/src/dynamics/Headers/: Dynamics.hpp
Dynamics_MTS/src/equilibrium/: MVRPMD_MTS_Estimator.cpp  MonteCarlo.cpp  MonteCarloHelper.cpp  MonteCarlo_MTS.cpp  MonteCarlo_MTSastra.cpp  Sampling_MTS.cpp  Sampling_MTSastra.cpp  dM_Matrix_dBeta.cpp
Dynamics_MTS/src/equilibrium/Headers/: MonteCarlo.hpp  MonteCarloHelper.h  MonteCarlo_MTS.hpp  MonteCarlo_MTSastra.hpp  Sampling_MTS.hpp
Dynamics_MTS/src/estimators/: dTheta_MTS_dBeta.cpp
Dynamics_MTS/src/estimators/Headers/: MVRPMD_MTS_Estimator.hpp  dM_Matrix_dBeta.hpp
Dynamics_MTS/src/forces/: Forces_MTS.cpp  Forces_two_particles.cpp  dM_Matrix_MTS_dQ.cpp  dSpring_dQ.cpp  dTheta_MTS_dQ.cpp
Dynamics_MTS/src/forces/Headers/: Forces_two_particles.hpp  dCdelec.hpp  dSpring_dQ.hpp  dTheta_MTS_dElec.hpp
Dynamics_MTS/src/hamiltonian/: BathSpringEnergy.cpp  CMakeLists.txt  CouplingEnergy.cpp  GTerm.cpp  MVRPMD_Hamiltonian.cpp  MVRPMD_MTS_Hamiltonian.cpp  M_Matrix.cpp  M_Matrix_MTS.cpp  RPMD_Hamiltonian.cpp  SpringEnergy.cpp  StateDepPots.cpp  Theta_MTS.cpp  test.cpp  two_particle_Hamiltonian.cpp
Dynamics_MTS/src/hamiltonian/Headers/: BathSpringEnergy.h  C_Matrix.h  CouplingEnergy.h  GTerm.h  SpringEnergy.h  Theta_MTS.hpp
Dynamics_MTS/src/integrators/: ABM_MVRPMD.cpp  VV_two_particle.cpp
Dynamics_MTS/src/integrators/Headers/: ABM_MVRPMD.hpp
Dynamics_MTS/src/misc/: MainHlpr.cpp  PopulationEstimator.cpp  aggregate.cpp  decorrelation.cpp  pop_estimators.cpp
Dynamics_MTS/src/misc/Headers/: MainHlpr.hpp  a.out  dynamics_in.h  electronic_in.h  gamma.h  init_PAC.hpp  monte_carlo_in.h  nr3.h  pop_estimators.hpp  sampling_in.h  system_in.h  test.cpp
MAVARIC/: jobrun
MAVARIC/scripts/: histogram.py
MAVARIC/sims/mvrpmd/: CMakeLists.txt  mvrpmd.cpp
MAVARIC/sims/mvrpmd/InputFiles/: Dynamics.txt  ElecParameters.txt  MonteCarlo.txt  Sampling.txt  SystemParameters.txt
MAVARIC/sims/mvrpmd/Output/: PAC  PSV0  PSV1  PSV2  PSV3  PSV4  PSV5  PSV6  PSV7  boltzman  decorrelation  equil_report  estimator.txt  mcData0  mcData1  mcData2  mcData3  mcData4  mcData5  mcData6  mcData7  position  position_10k_0001  position_10k_001  semi_classic  semi_classic_10k_0001  semi_classic_10k_001
MAVARIC/sims/mvrpmd/dynamics/: Dynamics.cpp  dynamics_mvrpmd.cpp
MAVARIC/sims/mvrpmd/equilibrium/: MonteCarloHelper.cpp  MonteCarlo_MTS.cpp  MonteCarlo_MTSastra.cpp  equilib_mvrpmd.cpp  input_mvrpmd.cpp
MAVARIC/sims/mvrpmd/sampling/: SamplingHelper.cpp  Sampling_MTS.cpp  sampling_mvrpmd.cpp
MAVARIC/sims/two-particle/Output/: P1  P2  PAC1  PAC1_beta8  PAC2  PAC2_0  PAC2_top  PSV10  PSV20  Q1  Q2  estimator.txt  hist1.txt  hist1_1e5.txt  hist2_1e5.txt  mcData0
MAVARIC/src/IO/Headers/: trajs_io.hpp
MAVARIC/src/estimators/: MVRPMD_MTS_Estimator.cpp  dM_Matrix_dBeta.cpp  theta_mixed_dBeta.cpp
MAVARIC/src/forces/: Forces_MTS.cpp  dCdelec.cpp  dTheta_MTS_dElec.cpp  mvrpmd_mixed_forces.cpp  theta_mixed_dElec.cpp  theta_mixed_dQ.cpp
MAVARIC/src/forces/Headers/: Forces_MTS.hpp  mvrpmd_forces_temp.hpp  mvrpmd_mixed_forces.hpp  theta_mixed_dElec.hpp
MAVARIC/src/hamiltonian/: CMakeLists.txt  C_Matrix.cpp  GTerm.cpp  MVRPMD_Hamiltonian.cpp  MVRPMD_MTS_Hamiltonian.cpp  StateDepPots.cpp  Theta_MTS.cpp  mvrpmd_ham_mixed.cpp  mvrpmd_mixed_ham.cpp  test.cpp  theta_mixed.cpp
MAVARIC/src/hamiltonian/Headers/: C_Matrix.h  MVRPMD_MTS_Hamiltonian.hpp  Theta_MTS.hpp
MAVARIC/src/hamiltonian/test/: test.cpp
MAVARIC/src/integrators/: ABM_MVRPMD.cpp  RK4_MVRPMD.cpp
MAVARIC/src/integrators/Headers/: ABM_MVRPMD.hpp  RK4_MVRPMD.hpp
MAVARIC/src/misc/: CMakeLists.txt  aggregate.cpp  auto_correlation.cpp  energy_conserv.cpp  init_PAC.cpp  mpi_wrapper.cpp  pop_estimators.cpp  test.cpp
MAVARIC/src/misc/Headers/: aggregate.hpp  auto_correlation.hpp  electronic_in.h  energy_conserv.hpp  (+4 more)
MAVARIC/src/monte_carlo/: CMakeLists.txt  elec_step.cpp  system_step.cpp  test.cpp
MAVARIC/src/monte_carlo/Headers/: elec_step.hpp  system_step.hpp
(+15 files in other folders)
